--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/Jaimer/NodeCMS/issues"
   },
-  "homepage": "https://github.com/Jaimer/NodeCMS#readme"
+  "homepage": "https://github.com/Jaimer/NodeCMS#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0"
+  }
 }
