--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "homepage": "https://github.com/Jaimer/NodeCMS#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.7"
   }
 }
