--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.7"
+    "mongoose": "^5.3.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
